[project]
name = "ceia-andd-g2"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Martín Curellich"},
    {name = "Ariel Matías Cabello"},
    {name = "Ignacio Agustin Costarelli"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "folium (>=0.20.0,<0.21.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "holidays (>=0.82,<0.83)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

